# crewai-in-action

./: .gitignore  README.md
chapter-01/my_crew/src/my_crew/: main.py  quick_test.py  tool_test.py
chapter-02/market_researcher/: .gitignore  README.md  pyproject.toml
chapter-02/market_researcher/src/market_researcher/: main.py  quick_test.py
chapter-02/my_crew/: pyproject.toml
chapter-03/seo_crew/: README.md  pyproject.toml
chapter-03/seo_crew/knowledge/: about-us.md  competitors.json
chapter-03/seo_crew/src/seo_crew/: chapter_excerpt.md  crew.py  main.py  tool_test.py
chapter-03/seo_crew/src/seo_crew/config/: agents.yaml  tasks.yaml
chapter-03/seo_crew/src/seo_crew/tools/: image_generation_tool.py
chapter-04/demo-app/: README.md  package-lock.json  package.json
chapter-04/demo-app/app/: layout.tsx  page.tsx
chapter-04/demo-app/app/api/auth/login/: route.ts
chapter-04/demo-app/app/api/auth/logout/: route.ts
chapter-04/demo-app/app/api/auth/me/: route.ts
chapter-04/demo-app/app/api/auth/signup/: route.ts
chapter-04/demo-app/app/api/chickens/: route.ts
chapter-04/demo-app/app/api/chickens/[id]/: route.ts
chapter-04/demo-app/app/api/stats/: route.ts
chapter-04/demo-app/app/chickens/: page.tsx
chapter-04/demo-app/app/dashboard/: page.tsx
chapter-04/demo-app/app/login/: page.tsx
chapter-04/demo-app/app/signup/: page.tsx
chapter-04/demo-app/components/: navbar.tsx
chapter-04/demo-app/lib/: auth-server.ts  auth.ts  db.ts  validation.ts
chapter-04/demo-app/scripts/: seed-db.ts  setup-db.ts
chapter-04/demo-docs/: README.md  _package-lock.json  _package.json  dashboard-overview.mdx  docs.json  getting-started.mdx  introduction.mdx  managing-chickens.mdx  package-lock.json  package.json
chapter-04/demo-docs/pages/: dashboard.mdx
chapter-04/docs_updater/: BROWSER_TOOLS_GUIDE.md  MCP_SERVER_GUIDE.md  README.md  delegation_test.py  pyproject.toml  start_playwright_mcp.sh  test_delegation.py  test_login_debug.py  test_mcp.py  test_screenshotter.py
chapter-04/docs_updater/src/docs_updater/: crew.py  main.py  mcp_server.py
chapter-04/docs_updater/src/docs_updater/config/: agents.yaml  tasks.yaml
chapter-04/docs_updater/src/docs_updater/tools/: browser_tools.py  custom_tool.py  scoped_file_tools.py
chapter-05/product_catalog/: .gitignore  README.md  pyproject.toml
chapter-05/product_catalog/sample_products/catalog/: catalog.json
chapter-05/product_catalog/scripts/: build_catalog_index.py
chapter-05/product_catalog/src/product_catalog/: crew.py  main.py  models.py
chapter-05/product_catalog/src/product_catalog/config/: agents.yaml  tasks.yaml
chapter-05/product_catalog/src/product_catalog/tools/: catalog_similarity_tool.py
chapter-06/gmail_support_flow/: .env.example  .gitignore  README.md  flowviz.toml  pyproject.toml
chapter-06/gmail_support_flow/data/fixtures/: inbox_tickets.json
chapter-06/gmail_support_flow/scripts/: render_flow.py
chapter-06/gmail_support_flow/src/gmail_support_flow/: __init__.py  flow.py  main.py  state.py
chapter-06/gmail_support_flow/src/gmail_support_flow/crews/: __init__.py  billing_crew.py  escalation_crew.py  feature_request_crew.py  technical_crew.py  triage_crew.py
chapter-06/gmail_support_flow/src/gmail_support_flow/crews/config/: agents.yaml  tasks_billing.yaml  tasks_escalation.yaml  tasks_feature_request.yaml  tasks_technical.yaml  tasks_triage.yaml
chapter-06/gmail_support_flow/src/gmail_support_flow/events/: __init__.py  listeners.py
chapter-06/gmail_support_flow/src/gmail_support_flow/persistence/: __init__.py  store.py
chapter-06/gmail_support_flow/src/gmail_support_flow/providers/: __init__.py  base.py  gmail_fake.py  gmail_real.py  slack_fake.py  slack_real.py
chapter-06/gmail_support_flow/src/gmail_support_flow/services/: __init__.py  base.py  support_http.py
chapter-06/gmail_support_flow/src/gmail_support_flow/tools/: __init__.py  customer_context_tools.py  gmail_tools.py  incident_tools.py  kb_tools.py
chapter-06/support-service/: .env.example  .gitignore  README.md  pyproject.toml
chapter-06/support-service/data/: schema.sql  seed.sql
chapter-06/support-service/data/fixtures/: kb_articles.json
chapter-06/support-service/src/support_service/: __init__.py  app.py  cli.py  db.py  kb.py  models.py
chapter-07/account-service/: .env.example  README.md  pyproject.toml
chapter-07/account-service/data/fixtures/: calendar_slots.json  renewal_contexts.json
chapter-07/account-service/src/account_service/: __init__.py  app.py  cli.py  models.py  store.py
chapter-07/account_assistant/: .env.example  pyproject.toml
chapter-07/account_assistant/src/account_assistant/: __init__.py  cli.py  conversation.py  events.py  flow.py  flow_figure.py  main_agent.py  memory.py  models.py  server.py  settings.py  state.py  thread_titles.py
chapter-07/account_assistant/src/account_assistant/a2a_contract_specialist/: __init__.py  agent.py
chapter-07/account_assistant/src/account_assistant/calendar/: __init__.py  base.py  fake.py  google.py
chapter-07/account_assistant/src/account_assistant/crews/: __init__.py  risk_crew.py
chapter-07/account_assistant/src/account_assistant/crews/config/: agents.yaml  tasks_risk.yaml
chapter-07/account_assistant/src/account_assistant/persistence/: __init__.py  store.py
chapter-07/account_assistant/src/account_assistant/services/: __init__.py  account_http.py
chapter-07/account_assistant/src/account_assistant/tools/: __init__.py  account_tools.py  action_tools.py  calendar_tools.py  delegation_tools.py
chapter-07/frontend/: .gitignore  package-lock.json  package.json
chapter-07/frontend/app/: globals.css  layout.tsx  page.tsx
chapter-07/frontend/app/api/account-assistant/[...path]/: route.ts
chapter-07/frontend/app/api/copilotkit/: handler.ts  route.ts
chapter-07/frontend/app/components/: account-picker.tsx  account-workspace.tsx  approvals-panel.tsx  conversation-panel.tsx  metric.tsx  rich-workspace.tsx  surface-card.tsx  thread-list.tsx  types.ts  use-account-workspace.ts  workflow-panel.tsx  workspace-utils.ts
(+1 files in other folders)
