[project]
name = "market_researcher"
version = "0.1.0"
description = "Single-agent market research analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=1.7.2",
    "crewai[tools]>=1.9.0",
]

[project.scripts]
market_researcher = "market_researcher.main:run"
run_crew = "market_researcher.main:run"
train = "market_researcher.main:train"
replay = "market_researcher.main:replay"
test = "market_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_researcher"]
