[project]
name = "seo_crew"
version = "0.1.0"
description = "seo_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "replicate>=1.0.7",
]

[project.scripts]
seo_crew = "seo_crew.main:run"
run_crew = "seo_crew.main:run"
train = "seo_crew.main:train"
replay = "seo_crew.main:replay"
test = "seo_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
