[project]
name = "support_service"
version = "0.1.0"
description = "Chapter 6 - Customer 360 + KB HTTP service that the Gmail support Flow consumes"
authors = [{ name = "Max Gfeller", email = "mail@maxgfeller.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "rank-bm25>=0.2.2",
]

[project.scripts]
support-service = "support_service.cli:serve"
seed = "support_service.cli:seed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/support_service"]
