[project]
name = "account_service"
version = "0.1.0"
description = "Chapter 7 - Mocked account, renewal, task, and calendar service for the conversational assistant"
authors = [{ name = "Max Gfeller", email = "mail@maxgfeller.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.scripts]
account-service = "account_service.cli:serve"
list-accounts = "account_service.cli:list_accounts"
reset-artifacts = "account_service.cli:reset_artifacts"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/account_service"]
